Fixed problem with smartphones with small screen. Most beautiful layout on mobile.

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
 }
 
 .wrapper {
-    /* margin: auto; */
     max-width: 400px;
     width: 100%;
     background-color: #fff;
@@ -79,6 +78,7 @@ body {
     overflow: hidden;
     list-style: none;
     height: 45px;
+    width: 100%;
     line-height: 45px;
     position: relative;
     background-color: #f0f0f0;
@@ -149,6 +149,25 @@ body {
     }
 }
 
+@media (max-width: 445px) and (max-height: 850px) {
+    .wrapper {
+        max-width: 100%;
+        height: 100%;
+        background-color: #fff;
+        border: 3px solid #8E49E8;
+        border-radius: 5px;
+        padding: 25px;
+    }
+
+    .container {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #fff;
+    }
+}
+
 @media (max-width: 384px) {
     .footer button {
         font-size: 13px;
@@ -176,5 +195,18 @@ body {
 
     .wrapper p.helpMobile.active {
         font-size: 10px;
+    }
+}
+
+@media (max-width: 295px) {
+    .todoList {
+        font-size: 10px;
+    }
+}
+
+@media (max-width: 249px) {
+    .todoList li span {
+        width: 35px;
+        right: 0;
     }
 }
